// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[ atoms / Input ] #Input when 'Input' Default is mounted should render 1`] = `
<DocumentFragment>
  <input
    class="input"
    placeholder="Kingdom slowed"
    type="text"
    value=""
  />
</DocumentFragment>
`;

exports[`[ atoms / Input ] #Input when 'Input' Inline is mounted should render 1`] = `
<DocumentFragment>
  <input
    class="input is-inline"
    placeholder="Kingdom slowed"
    type="text"
    value=""
  />
</DocumentFragment>
`;

exports[`[ atoms / Input ] #Input when 'Input' Types is mounted should render 1`] = `
<DocumentFragment>
  <input
    class="input"
    placeholder="Kingdom slowed"
    type="text"
    value=""
  />
</DocumentFragment>
`;

exports[`[ atoms / Input ] #Input when 'Input' Value is mounted should render 1`] = `
<DocumentFragment>
  <input
    class="input"
    placeholder="Kingdom slowed"
    type="text"
    value="Others mainly cakehole Thorin moldy facial."
  />
</DocumentFragment>
`;
